@@ -1,3 +1,8 @@
+2006-05-02 Borut Razem <borut.razem AT siol.net>
+
+	* doc/Makefile.in: removed *.ind dependency since there is no rule to
+	  create *.ind, which made make to fail if invoked with -j 2
+
 2006-05-01 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* src/SDCCglue.c (emitRegularMap): partial fix for bug 1477149, thanks
